--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 <meta name="theme-color" content="#ffffff">
 <body>
 <title>Aidons Caillou</title>
-<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/experiments/master/Cookie-Download-PNG.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Cookie</button>
+<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/caillou-lejeu/master/Cookie-Download-PNG.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Cookie</button>
 <br>
-<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/experiments/master/blond%20(1).png')" style="position:fixed;z-index:3;top:auto;left:auto;">Blond</button>
+<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/caillou-lejeu/master/blond.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Blond</button>
 <br>
-<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/experiments/master/roux%20(1).png')" style="position:fixed;z-index:3;top:auto;left:auto;">Roux</button>
+<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/caillou-lejeu/master/roux.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Roux</button>
 <br>
-<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/experiments/master/Peanut-Gallery1.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Galette Azim-Azim</button>
+<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/caillou-lejeu/master/Peanut-Gallery1.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Galette Azim-Azim</button>
 <br>
-<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/experiments/master/aec.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Arc-en-ciel</button>
+<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/caillou-lejeu/master/aec.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Arc-en-ciel</button>
 <br>
-<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/experiments/master/BodyFur_Texture_2.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Brun</button>
+<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/caillou-lejeu/master/BodyFur_Texture_2.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Brun</button>
 <br>
 <button onclick="clearCanvas()" style="position:fixed;z-index:3;top:auto;left:auto;">Effacer</button>
 <br>
