--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <title>Aidons Caillou</title>
 <button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/caillou-lejeu/master/Cookie-Download-PNG.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Cookie</button>
 <br>
-<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/caillou-lejeu/master/blond.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Blond</button>
+<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/caillou-lejeu/master/blond%20(1).png')" style="position:fixed;z-index:3;top:auto;left:auto;">Blond</button>
 <br>
-<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/caillou-lejeu/master/roux.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Roux</button>
+<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/caillou-lejeu/master/roux%20(1).png')" style="position:fixed;z-index:3;top:auto;left:auto;">Roux</button>
 <br>
 <button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/caillou-lejeu/master/Peanut-Gallery1.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Galette Azim-Azim</button>
 <br>
