--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
 <meta name="theme-color" content="#ffffff">
 <body>
 <title>Aidons Caillou</title>
-<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/caillou-lejeu/master/Cookie-Download-PNG.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Cookie</button>
+<button onclick="changetexture('Cookie-Download-PNG.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Cookie</button>
 <br>
-<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/caillou-lejeu/master/blond%20(1).png')" style="position:fixed;z-index:3;top:auto;left:auto;">Blond</button>
+<button onclick="changetexture('blond%20(1).png')" style="position:fixed;z-index:3;top:auto;left:auto;">Blond</button>
 <br>
-<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/caillou-lejeu/master/roux%20(1).png')" style="position:fixed;z-index:3;top:auto;left:auto;">Roux</button>
+<button onclick="changetexture('roux%20(1).png')" style="position:fixed;z-index:3;top:auto;left:auto;">Roux</button>
 <br>
-<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/caillou-lejeu/master/Peanut-Gallery1.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Galette Azim-Azim</button>
+<button onclick="changetexture('Peanut-Gallery1.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Galette Azim-Azim</button>
 <br>
-<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/caillou-lejeu/master/aec.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Arc-en-ciel</button>
+<button onclick="changetexture('aec.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Arc-en-ciel</button>
 <br>
-<button onclick="changetexture('https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/caillou-lejeu/master/BodyFur_Texture_2.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Brun</button>
+<button onclick="changetexture('BodyFur_Texture_2.png')" style="position:fixed;z-index:3;top:auto;left:auto;">Brun</button>
 <br>
 <button onclick="clearCanvas()" style="position:fixed;z-index:3;top:auto;left:auto;">Effacer</button>
 <br>
-<img id="caillou" src="https://github.com/PIERREQUIROULENAMASSEPASMOUSSE/experiments/blob/master/Caillou.png?raw=true" style="position:fixed;z-index:1;left:50%;top:100%;transform: translate(-50%, -50%);width:120%;height:185%;">
+<img id="caillou" src="Caillou.png" style="position:fixed;z-index:1;left:50%;top:100%;transform: translate(-50%, -50%);width:120%;height:185%;">
 <img id="cookie" src="https://raw.githubusercontent.com/PIERREQUIROULENAMASSEPASMOUSSE/experiments/master/Cookie-Download-PNG.png" style="display:none;">
 <canvas id="canvas" style="position:fixed;z-index:2;left:0;top:0;"></canvas>
     
